--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
+    "react-router-dom": "^7.6.2",
     "react-slideshow-image": "^4.3.2",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.8",
