--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
+    "react-simple-typewriter": "^5.0.1",
     "react-slideshow-image": "^4.3.2",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.8",
