--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "react-simple-typewriter": "^5.0.1",
