--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-slideshow-image": "^4.3.2",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.22.0",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.10"
   },
