--- a/package.json
+++ b/package.json
@@ -22,19 +22,21 @@
     "react-slideshow-image": "^4.3.2",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.0",
-    "swiper": "^11.2.8",
-    "tailwindcss": "^4.1.10"
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.43",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10",
     "vite": "^6.3.5"
   }
 }
